index_files/websiteCSS.css
html, body {
  font-size: 14px !important;
}

.contactUs {
  display: none !important;
}

h1 {
  font-size: 1.602em;
}

h2 {
  font-size: 1.424em;
}

h3 {
  font-size: 1.266em;
}

h4 {
  font-size: 1.125em;
}

h5 {
  font-size: 0.889em;
}

h6 {
  font-size: 0.79em;
}

.display-1 {
  font-size: 3.906em;
}

.display-2 {
  font-size: 3.125em;
}

.display-3 {
  font-size: 2.5em;
}

.display-4 {
  font-size: 2em;
}

@media (min-width:48em) {
  h1 {
    font-size: 2.441em;
  }

  h2 {
    font-size: 1.953em;
  }

  h3 {
    font-size: 1.563em;
  }

  h4 {
    font-size: 1.25em;
  }

  .display-1 {
    font-size: 6em;
  }

  .display-2 {
    font-size: 5.5em;
  }

  .display-3 {
    font-size: 4.5em;
  }

  .display-4 {
    font-size: 3.5em;
  }
}

@media (min-width:62em) {
  html, body {
    font-size: 16px !important;
  }
}

@media (min-width:75em) {
  html, body {
    font-size: 16.5px !important;
  }
}

.input-group {
  display: flex;
  align-items: stretch;
  justify-content: center;
  align-content: center;
}

.input-group .form-control, .input-group-addon, .input-group-btn {
  display: flex;
}

.input-group-addon {
  font-size: 1rem;
  padding: .375rem .75rem;
  align-items: center;
  line-height: 1.5;
  width: auto;
}

.input-group-btn {
  width: auto;
}

.form-control {
  height: auto;
  font-size: 1rem;
  padding: .375rem .75rem;
}

select.form-control:not([size]):not([multiple]) {
  height: calc(2.25rem + 2px);
  font-size: 1rem;
  padding: .375rem .75rem;
}

.form-control.input-lg {
  font-size: 1.25rem;
  padding: .5rem 1rem;
  line-height: 1.5;
}

.btn {
  font-size: 1rem;
  padding: .375rem .75rem;
  line-height: 1.5;
}

.btn-lg {
  font-size: 1.25rem;
  padding: .5rem 1rem;
  line-height: 1.5;
}

.text-110 {
  font-size: 1.1rem;
}

.text-120 {
  font-size: 1.2rem;
}

.text-125 {
  font-size: 1.25rem;
}

.text-130 {
  font-size: 1.3rem;
}

.text-150 {
  font-size: 1.5rem;
}

.text-180 {
  font-size: 1.8rem;
}

:root {
  --global_main_color: #ba7d91;
  --global_main_color_btn_text_color: #ffffff;
  --home_text_color: #ffffff;
  --home_third_background_color: #0087e1;
  --home_custom_image_size: px;
  --home_custom_image_width: px;
  --home_text_size_px: 75px;
  --home_text_size_2_px: 45px;
  --slogan_text_size_px: 26px;
  --home_text_size: 75;
  --home_text_size_2: 45;
  --slogan_text_size: 26;
  --home_text_size_px_media: 75px;
  --home_text_size_2_px_media: 45px;
  --slogan_text_size_px_media: 26px;
  --layout_text_align: center;
  --layout_text_align_rtl: center;
  --layout_text_box_width: 100%;
  --layout_left_side_width: 50%;
  --layout_left_side_width_vh: 50vh;
  --homepage_layout_height: 100%;
  --homepage_layout_height_vh: 100vh;
  --homepage_layout_height_menu_space: 0px;
  --mainNavMobileHeight: 0px;
  --homepage_layout_height_opacity_space_top: 0px;
  --homepage_layout_height_opacity_space_bottom: 0px;
  --mobileMenuFontSize: 20px;
  --mobileMenuPagesSpace: 5px;
  --homepageShapeDividerList_Size: 17%;
  --layout_bottom_spacing: 0px;
  --window-height: 100vh;
  --window-width: 100vw;
  --menu_font_size: 13px;
  --menu_pages_space: 1px;
  --menu_pages_side_padding: 15px;
  --menu_pages_letter_spacing: 0.5px;
  --menu_pages_word_spacing: 0px;
  --menu_thin_border: #e4eddb;
  --mobileMenuTextAlign: center;
  --menu_text_color: #000000;
  --menu_color: #e4eddb;
  --modules_color_text: #000000;
  --inside_modules_color_text: #000000;
  --sectionsPadding: 100px;
  --home_text_top_space_1: 0px;
  --home_text_bottom_space_1: 16px;
  --home_text_top_space_2: 0px;
  --home_text_bottom_space_2: 30px;
  --home_text_top_space_3: 0px;
  --home_text_bottom_space_3: 31px;
  --homepage_padding_top: px;
  --homepage_padding_bottom: px;
  --homepage_main_goal_margin_top: 0px;
  --homepage_main_goal_margin_bottom: 0px;
  --homepage_second_goal_margin_top: 0px;
  --homepage_second_goal_margin_bottom: 0px;
  --modules_color_second: #ebebeb;
  --modules_color: #f7f9f8;
  --footer_back: #333333;
  --home_background_color: #000000;
}

textarea {
  resize: none;
}

@media(min-width:768px) {
  #top-section .title {
    margin-right: auto;
    margin-left: auto;
    max-width: 1000px;
    padding: 60px 50px;
  }

  #top-section .title p {
    margin-right: auto;
    margin-left: auto;
    max-width: 80%;
  }
}

@media(max-width:767px) {
  #top-section .title {
    margin-right: auto;
    margin-left: auto;
    padding: 40px 20px;
  }
}

.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.animated.infinite {
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.animated.delay-1s {
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.animated.delay-2s {
  -webkit-animation-delay: 2s;
  animation-delay: 2s;
}

.animated.delay-3s {
  -webkit-animation-delay: 3s;
  animation-delay: 3s;
}

.animated.delay-4s {
  -webkit-animation-delay: 4s;
  animation-delay: 4s;
}

.animated.delay-5s {
  -webkit-animation-delay: 5s;
  animation-delay: 5s;
}

.animated.fast {
  -webkit-animation-duration: 800ms;
  animation-duration: 800ms;
}

.animated.faster {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
}

.animated.slow {
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
}

.animated.slower {
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
}

@media (print), (prefers-reduced-motion) {
  .animated {
    -webkit-animation: unset !important;
    animation: unset !important;
    -webkit-transition: none !important;
    transition: none !important;
  }
}

#top-section {
  padding: 0;
  position: relative;
  width: 100%;
  height: auto;
  text-align: center;
  background-color: transparent;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

#top-section .home_background_wrapper {
  background-color: #000000;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}
/* ... */

